--- a/includes/assets/style.css
+++ b/includes/assets/style.css
@@ -1,6 +1,7 @@
 .project-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    /* grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); */
+    grid-template-columns: repeat(4, 240px);
     gap: 20px;
     padding: 20px;
 }
@@ -11,11 +12,12 @@
     /* border-radius: 10px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     
-    transition: transform 0.3s ease; */
+    transition: transform 0.3s ease; */ 
 }
 
 .project-item:hover {
-    transform: translateY(-5px);
+    background: #ffe;
+    /* transform: translateY(-5px); */
 }
 
 .project-image img {
@@ -25,8 +27,8 @@
 }
 
 .project-info {
-    padding: 15px;
-    text-align: center;
+     padding: 0 5px;
+    /* text-align: center; */
 }
 
 .project-info h3 {
@@ -39,14 +41,16 @@
     color: #666;
 }
 
-.read-more {
-    display: inline-block;
+.more {
+    /* display: inline-block;
     margin-top: 10px;
     color: #0073aa;
     text-decoration: none;
-    font-weight: bold;
+    font-weight: bold; */
+    font-size: 12px;
+    padding: 0px 5px; 
 }
 
-.read-more:hover {
+.more:hover {
     text-decoration: underline;
 }
