--- a/includes/assets/style.css
+++ b/includes/assets/style.css
@@ -3,7 +3,7 @@
     /* grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); */
     grid-template-columns: repeat(4, 240px);
     gap: 20px;
-    padding: 20px;
+    padding: 20px 0;
 }
 
 .project-item {
@@ -57,11 +57,19 @@
 
 
 .select2-container {
-    width: 100% !important;
+    width: 50% !important;
 }
 
 .select2-selection {
     border-radius: 5px;
     padding: 5px;
     font-size: 14px;
+}
+.select2-selection--multiple{
+    border: 1px solid;
+    border-color: rgba(0, 0, 0, 0.08)!important;
+    padding: 8px 12px!important;
+}
+.select2-container .select2-search--inline .select2-search__field{
+    margin: 0px!important;
 }
