--- a/includes/assets/style.css
+++ b/includes/assets/style.css
@@ -141,3 +141,10 @@
 .slick-slider .slick-prev{
     z-index: 1!important;
 }
+
+.slick-prev:before,
+.slick-next:before{
+    font-size: 30px!important;
+    color: white!important;
+    opacity: 1!important;
+}
