--- a/includes/assets/style.css
+++ b/includes/assets/style.css
@@ -1,7 +1,7 @@
 .project-grid {
     display: grid;
     /* grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); */
-    grid-template-columns: repeat(4, 240px);
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); 
     gap: 20px;
     padding: 20px 0;
 }
