--- a/includes/assets/style.css
+++ b/includes/assets/style.css
@@ -1,14 +1,19 @@
 .project-grid {
-    display: grid;
-    /* grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); */
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); 
+    display: inline-flex;
+    /* grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));  */
     gap: 20px;
-    padding: 20px 0;
+    justify-content: center; /* Centers items when fewer projects remain */
 }
 
 .project-item {
+    
+     
+    max-width: 300px; /* Ensures consistent tile size */
     background: #fff;
+    border-radius: 8px;
     overflow: hidden;
+    text-align: center;
+    padding: 15px 0;
     /* border-radius: 10px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     
