--- a/includes/assets/style.css
+++ b/includes/assets/style.css
@@ -1,14 +1,14 @@
 .project-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); /* Dynamic grid */
+    display: inline-flex;
+    flex-wrap: wrap;
     gap: 15px;
     justify-content: center;
-    align-items: start;
+    
 }
 
 
 .project-item {
-    max-width: 100%;  /* Ensures uniform tile size */
+    max-width: 250px;  /* Ensures uniform tile size */
     background: #fff;
     border-radius: 8px;
     overflow: hidden;
