--- a/includes/assets/style.css
+++ b/includes/assets/style.css
@@ -84,9 +84,9 @@
 
 /* Breadcrumb */
 .breadcrumb {
-    font-size: 14px;
+    /* font-size: 14px;
+    color: #555; */
     margin-bottom: 15px;
-    color: #555;
 }
 .breadcrumb a {
     color: #0073aa;
