--- a/includes/assets/style.css
+++ b/includes/assets/style.css
@@ -12,7 +12,7 @@
     background: #fff;
     border-radius: 8px;
     overflow: hidden;
-    text-align: center;
+    /* text-align: center; */
     padding: 15px 0;
 }
 
@@ -35,7 +35,7 @@
 }
 
 .project-info h3 {
-    font-size: 18px;
+    font-size: 15px!important;
     margin: 10px 0;
 }
 
@@ -82,6 +82,7 @@
 }
 
 
+ 
 
 .select2-results__option {
     padding-right: 20px;
@@ -103,7 +104,7 @@
     font-family:fontAwesome;
     content: "\f00c";
     color: #fff;
-    background-color: #f77750;
+    background-color: #005895;
     border: 0;
     display: inline-block;
     padding-left: 3px;
@@ -122,7 +123,7 @@
       border-radius: 4px;
   }
   .select2-container--default.select2-container--focus .select2-selection--multiple {
-      border-color: #f77750;
+      border-color: #005895;
       border-width: 2px;
   }
   .select2-container--default .select2-selection--multiple {
@@ -135,8 +136,26 @@
   
   }
   .select2-selection .select2-selection--multiple:after {
-	content: 'hhghgh';
+      content: 'hhghgh';
+  }
+  /* select with icons badges single*/
+.select-icon .select2-selection__placeholder .badge {
+	display: none;
 }
+.select-icon .placeholder {
+	display: none;
+}
+.select-icon .select2-results__option:before,
+.select-icon .select2-results__option[aria-selected=true]:before {
+	display: none !important;
+	/* content: "" !important; */
+}
+.select-icon  .select2-search--dropdown {
+	display: none;
+}
+
+
+
 /* Breadcrumb */
 .breadcrumb {
     /* font-size: 14px;
