--- a/includes/assets/style.css
+++ b/includes/assets/style.css
@@ -2,7 +2,7 @@
     display: inline-flex;
     flex-wrap: wrap;
     gap: 15px;
-    justify-content: center;
+    /* justify-content: center; */
     
 }
 
