--- a/includes/assets/style.css
+++ b/includes/assets/style.css
@@ -44,9 +44,11 @@
 }
 .project-info p {
     font-size: 14px;
-    color: #666;
+    color: #222;
 }
-
+.project-description p{
+    color: #222;
+}
 p strong {
     color: rgba(83, 83, 83, 0.5)!important;
   }
@@ -238,13 +240,13 @@ p strong {
 .back-button {
     display: inline-block;
     color: rgba(83, 83, 83, 0.5)!important;
-    
+
      
     text-decoration: none;
     
 }
 .back-button:hover {
-    background: #005f88;
+    color: #005f88;
 }
 
 .slick-slider .slick-prev{
