updates from live

--- a/includes/assets/style.css
+++ b/includes/assets/style.css
@@ -1,3 +1,4 @@
+.project-detail-container {width: 83.33333%; margin: 0 auto;}
 .project-heading-container{
     display: inline-flex;
     flex-wrap: wrap;
@@ -24,7 +25,7 @@
 /*.select2-container .select2-search--inline .select2-search__field {color:#fff;}*/
 /*.select2-container--default .select2-selection {background:#b4b6b8;}*/
 .project-item {
-    max-width: 300px;  /* Ensures uniform tile size */
+    max-width: 500px;  /* Ensures uniform tile size */
     background: #fff;
     border-radius: 8px;
     overflow: hidden;
@@ -38,10 +39,10 @@
 }
 
 .project-image img {
-    /* width: 100%;
+    width: 100%;
     height: auto;
-    max-height: 180px;   
-    object-fit: cover; */
+    /*max-height: 180px;   */
+    object-fit: cover;
 }
 
 
